# tdescore

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  environment.yml  pyproject.toml
notebooks/: classifications.ipynb  flowchart.ipynb  train_tdescore.ipynb  train_tdescore_parameter_subset.ipynb  train_tdescore_realtime.ipynb
sample_data/: ZTF20achpcvt.json
tdescore/: alerts.py  data.py  download.py  lightcurve.py  paths.py
tdescore/classifications/: __init__.py  bts.py  crossmatch.py  growth_marshal.py  mapping.py  milliquas.py  tde.py
tdescore/classifier/: assign.py  balance.py  collate.py  features.py  train.py
tdescore/combine/: __main__.py  parse.py  parse_catwise.py  parse_fritz.py  parse_full.py  parse_gaia.py  parse_partial.py  parse_ps1.py  parse_ps1strm.py  parse_sdss.py  parse_sncosmo.py  parse_thermal.py  parse_tns.py  parse_wise.py  plot.py
tdescore/download/: __init__.py  __main__.py  all.py  catwise.py  fritz.py  gaia.py  kowalski.py  legacy_survey.py  mast.py  sdss.py  tns.py  wise.py  ztf.py
tdescore/lightcurve/: __init__.py  __main__.py  analyse.py  color.py  early.py  errors.py  extinction.py  extract.py  full.py  gaussian_process.py  infant.py  month.py  offset.py  plot.py  thermal.py  utils.py  week.py  window.py
tdescore/metadata/: __main__.py  parse.py  plot.py
tdescore/raw/: __init__.py  __main__.py  augment.py  extract.py  nuclear_sample.py  table.py  tde.py  ztf.py
tdescore/sncosmo/: __init__.py  __main__.py  run_sncosmo.py  utils.py
tdescore/utils/: __init__.py  kowalski.py
