[tool.poetry]
name = "tdescore"
version = "0.1.0"
description = ""
authors = ["Robert Stein <rdstein@caltech.edu>"]

[tool.poetry.dependencies]
python = "~3.10"
astropy = "4.3.1"
mpi4py = "3.1.4"
"ruamel.yaml" = "^0.17.21"
numpy = "1.21.0"
mosfit = "^1.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
