[tool.poetry]
name = "tdescore"
version = "0.1.0"
description = ""
authors = ["Robert Stein <rdstein@caltech.edu>"]

[tool.poetry.dependencies]
python = "~3.10"
astropy = "^5.1.1"
jupyter = "^1.0.0"
pathlib = "^1.0.1"
numpy = "^1.23.1"
nuztf = "^2.6.4"
scikit-learn = "^1.2.0"
scipy = "^1.10.0"
tqdm = "^4.64.1"
pre-commit = "^2.21.0"
pylint = "^2.15.10"
imbalanced-learn = "^0.10.1"
xgboost = "^1.7.3"
black = "^22.6.0"
isort = "^5.12.0"
sncosmo = "^2.9.0"
iminuit = "^2.21.0"

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"
disable=["logging-fstring-interpolation"]

[build-system]
requires = ["setuptools", "wheel", "poetry-core",]
build-backend = "poetry.core.masonry.api"
