[build-system]
requires = ["setuptools>=45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tdescore"
version = "1.0.0"
description = ""
authors = [
    {name = "Robert Stein", email = "rdstein@caltech.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Science/Research',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dependencies = [
    "astropy >= 5.0.0",
    "jupyter",
    "pathlib",
    "numpy",
    "scikit-learn",
    "scipy",
    "tqdm",
    "pre-commit",
    "imbalanced-learn",
    "xgboost",
    "sncosmo",
    "shap",
    "sfdmap2",
    "extinction",
    "penquins"
]
[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "coveralls",
    "nuztf",
]

[project.urls]
Homepage = "https://github.com/robertdstein/tdescore"

[tool.setuptools]
packages = ["tdescore"]

[tool.coverage.run]
source = ["tdescore"]


[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"
disable=["logging-fstring-interpolation"]
